fix thumbnail img overflow

--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -30,8 +30,9 @@ h1, h4 {
 }
 
 .thumbnail-img {
-  width:300px; 
+  width:300px;
   height:200px;
+  max-width: 100%;
 }
 
 .clickeable {
